--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,48 @@
+@import '/node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body{
+        @apply bg-green-50;        
+    }
+    h1 {
+      @apply text-3xl;
+    }
+    h2 {
+      @apply text-2xl;
+    }
+    h3 {
+        @apply text-xl;
+    }
+    h4 {
+        @apply text-lg;
+    }
+    p {
+        @apply text-gray-600;
+      }
+      .container {
+        @apply mx-auto px-5;
+      }
+    .btn-indigo{
+      @apply flex sm:inline-flex justify-center items-center bg-gradient-to-tr from-indigo-500 to-purple-400 hover:from-indigo-600 hover:to-purple-500 active:from-indigo-700 active:to-purple-600 focus-visible:ring ring-indigo-300 text-white font-semibold text-center rounded-md outline-none transition duration-100 px-5 py-2
+    }
+    .btn-error{
+      @apply flex sm:inline-flex justify-center items-center bg-gradient-to-tr from-pink-500 to-red-400 hover:from-pink-600 hover:to-red-500 active:from-pink-700 active:to-red-600 focus-visible:ring ring-pink-300 text-white font-semibold text-center rounded-md outline-none transition duration-100 px-5 py-2
+    }
+    .btn-success{
+      @apply flex sm:inline-flex justify-center items-center bg-green-500 hover:bg-green-600 active:bg-green-700 focus-visible:ring ring-green-300 text-white font-semibold text-center rounded-md outline-none transition duration-100 px-5 py-2
+    }
+    .btn-info{
+      @apply flex sm:inline-flex justify-center items-center bg-blue-500 hover:bg-blue-600 active:bg-blue-700 focus-visible:ring ring-blue-300 text-white font-semibold text-center rounded-md outline-none transition duration-100 px-5 py-2
+    }
+    .btn-warning{
+      @apply flex sm:inline-flex justify-center items-center bg-amber-500 hover:bg-amber-600 active:bg-amber-700 focus-visible:ring ring-amber-300 text-white font-semibold text-center rounded-md outline-none transition duration-100 px-5 py-2
+    }
+    i{
+      @apply cursor-pointer;        
+    }
+
+  }
